2011-03-08  Zan Dobersek  <zandobersek@gmail.com>

Reviewed by Martin Robinson.

        [Gtk] toDataURL uses incorrect quality value when saving GdkPixbuf to buffer
        https://bugs.webkit.org/show_bug.cgi?id=55878

        Enable a passing test now that we properly use the quality value when requesting
        a GdkPixbuf to be saved into a buffer.

        * platform/gtk/Skipped:
2011-03-08  Zan Dobersek  <zandobersek@gmail.com>

        Reviewed by Martin Robinson.

        [Gtk] toDataURL uses incorrect quality value when saving GdkPixbuf to buffer
        https://bugs.webkit.org/show_bug.cgi?id=55878

        Multiply the quality parameter by 100 to put it in the range [0, 100] as needed
        when saving GdkPixbuf to a buffer.

        * platform/graphics/gtk/ImageBufferGtk.cpp:
        (WebCore::ImageBuffer::toDataURL):

Canonical link: https://commits.webkit.org/70440@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80546 268f45cc-cd09-0410-ab3c-d52691b4dbfc